fixed invisible-input @extends to @includes

--- a/scss/style/blocks/checkbox.scss
+++ b/scss/style/blocks/checkbox.scss
@@ -36,7 +36,7 @@
 .checkbox--js {
 
   .checkbox__checkbox {
-    @extend .invisible-input;
+    @include invisible-input();
   }
 
   .checkbox__label {
